// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About: Match Snapshots 1 1`] = `
<View>
  <Themed.ListItem
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    title={
      <Text
        style={
          Object {
            "color": "#009CFF",
            "fontFamily": "Roboto",
            "fontSize": 12,
          }
        }
      >
        About
      </Text>
    }
    titleStyle={
      Object {
        "paddingBottom": 5,
        "paddingTop": 20,
      }
    }
  />
  <Themed.ListItem
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    title={
      <MyModal
        background="#FFF"
        color="#17212D"
        name="About Us"
      >
        <AboutUs
          background="#FFF"
          color="#17212D"
        />
      </MyModal>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    title={
      <MyModal
        background="#FFF"
        color="#17212D"
        name="Licenses"
      >
        <Licenses
          background="#FFF"
          color="#17212D"
        />
      </MyModal>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    title={
      <MarkdownModal
        background="#FFF"
        color="#17212D"
        name="Changelog"
      >
        
# Changelog

## 1.0.0
### What's New

* Initial release of the app
      </MarkdownModal>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    title={
      <View>
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Roboto-Light",
                },
                Object {
                  "color": "#17212D",
                },
              ]
            }
          >
            Email
          </Text>
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Roboto-Light",
                },
                Object {
                  "color": "grey",
                },
              ]
            }
          >
            me@haseebmajid.dev
          </Text>
        </TouchableOpacity>
      </View>
    }
  />
</View>
`;

exports[`About: Match Snapshots 2 1`] = `
<View>
  <Themed.ListItem
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    title={
      <Text
        style={
          Object {
            "color": "#009CFF",
            "fontFamily": "Roboto",
            "fontSize": 12,
          }
        }
      >
        About
      </Text>
    }
    titleStyle={
      Object {
        "paddingBottom": 5,
        "paddingTop": 20,
      }
    }
  />
  <Themed.ListItem
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    title={
      <MyModal
        background="#17212D"
        color="#FFF"
        name="About Us"
      >
        <AboutUs
          background="#17212D"
          color="#FFF"
        />
      </MyModal>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    title={
      <MyModal
        background="#17212D"
        color="#FFF"
        name="Licenses"
      >
        <Licenses
          background="#17212D"
          color="#FFF"
        />
      </MyModal>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    title={
      <MarkdownModal
        background="#17212D"
        color="#FFF"
        name="Changelog"
      >
        
# Changelog

## 1.0.0
### What's New

* Initial release of the app
      </MarkdownModal>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    title={
      <View>
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Roboto-Light",
                },
                Object {
                  "color": "#FFF",
                },
              ]
            }
          >
            Email
          </Text>
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Roboto-Light",
                },
                Object {
                  "color": "grey",
                },
              ]
            }
          >
            me@haseebmajid.dev
          </Text>
        </TouchableOpacity>
      </View>
    }
  />
</View>
`;

exports[`About: Match Snapshots 3 1`] = `
<MyModal
  background="#17212D"
  color="#FFF"
  name="About Us"
>
  <AboutUs
    background="#17212D"
    color="#FFF"
  />
</MyModal>
`;
